Fix images for light and dark mode. Made improvements to docs (#22)

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -9,73 +9,78 @@
 
 /* You can override the default Infima variables here. */
 :root {
-    --ifm-color-primary: #ff8b53;
-    --ifm-color-primary-dark: #29784c;
-    --ifm-color-primary-darker: #277148;
-    --ifm-color-primary-darkest: #205d3b;
-    --ifm-color-primary-light: #33925d;
-    --ifm-color-primary-lighter: #359962;
-    --ifm-color-primary-lightest: #3cad6e;
-    --ifm-code-font-size: 95%;
-    --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
-    --ifm-navbar-height: 5rem;
+  --ifm-color-primary: #ff8b53;
+  --ifm-color-primary-dark: #29784c;
+  --ifm-color-primary-darker: #277148;
+  --ifm-color-primary-darkest: #205d3b;
+  --ifm-color-primary-light: #33925d;
+  --ifm-color-primary-lighter: #359962;
+  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-code-font-size: 95%;
+  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --ifm-navbar-height: 5rem;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme="dark"] {
-    --ifm-color-primary: #ff8b53;
-    --ifm-color-primary-dark: #21af90;
-    --ifm-color-primary-darker: #1fa588;
-    --ifm-color-primary-darkest: #1a8870;
-    --ifm-color-primary-light: #29d5b0;
-    --ifm-color-primary-lighter: #32d8b4;
-    --ifm-color-primary-lightest: #4fddbf;
-    --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --ifm-color-primary: #ff8b53;
+  --ifm-color-primary-dark: #21af90;
+  --ifm-color-primary-darker: #1fa588;
+  --ifm-color-primary-darkest: #1a8870;
+  --ifm-color-primary-light: #29d5b0;
+  --ifm-color-primary-lighter: #32d8b4;
+  --ifm-color-primary-lightest: #4fddbf;
+  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
 .navbar .navbar__item {
-    align-items: center;
-    display: flex;
-    font-size: 1.25rem;
-    font-weight: 700;
+  align-items: center;
+  display: flex;
+  font-size: 1.25rem;
+  font-weight: 700;
 }
 
 a[docid="docs"] > svg {
-    display: none;
+  display: none;
 }
 
 /* Adjustments for mobile view */
 @media (max-width: 768px) {
-    /* Reduce the logo size for smaller screens */
-    .navbar__logo img {
-        height: 32px;
-        align-items: center;
-    }
+  /* Reduce the logo size for smaller screens */
+  .navbar__logo img {
+    height: 32px;
+    align-items: center;
+  }
 
-    /* Reduce the padding around the logo for smaller screens */
-    .navbar__logo {
-        padding: 2px; /* Adjust the padding for smaller screens */
-    }
+  /* Reduce the padding around the logo for smaller screens */
+  .navbar__logo {
+    padding: 2px; /* Adjust the padding for smaller screens */
+  }
 }
 
 /* Center the Discord link within its parent */
 .navbar__items.navbar__items--right {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 @media screen and (max-width: 480px) {
-    a.navbar__item.navbar__link[docid="docs"] {
-        display: none !important;
-    }
+  a.navbar__item.navbar__link[docid="docs"] {
+    display: none !important;
+  }
 }
 
 @media screen and (max-width: 480px) {
-    a.navbar__item.navbar__link[href="https://blog.coderabbit.ai/blog"]
-    {
-        display: none;
-    }
+  a.navbar__item.navbar__link[href="https://blog.coderabbit.ai/blog"]
+  {
+    display: none;
+  }
+}
+
+[data-theme="light"] img[src$="#gh-dark-mode-only"],
+[data-theme="dark"] img[src$="#gh-light-mode-only"] {
+  display: none;
 }
 
 /* Light mode Discord icon */
